refactor: add @Transactional, fix toList(), add delete-404 test